Multiple choice change to  Single choice

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </div>
                 </div>
 
-                <h3>2、Multiple choice question(lO points per space, 20 points total)</h3>
+                <h3>2、Single choice question(lO points per space, 20 points total)</h3>
                 <div class="card">
                     <div class="card-body">
                         <div class="form-group">
